# projections

./: Cargo.toml  README.md
src/: data.rs  draw_buffer.rs  main.rs
src/gui/: mod.rs
src/resources/shaders/: cylindrical_lambert.vert  globe_texturing.frag  gnomonic.vert  lines.geom  orthographic.vert  pass-through.vert  stereographic.vert  texturing.frag  texturing_multi-sample.frag  tris.geom  uniform_color.frag
src/runner/: clipboard_support.rs  mod.rs
src/views/: base.rs  cylindrical_lambert.rs  gnomonic.rs  mod.rs  orthographic.rs  stereographic.rs
